--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Cacha';
-  src: url('/fonts/Cacha.ttf') format('truetype');
+  src: url('/fonts/Cacha.otf') format('truetype');
 }
 
 
