items icons added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,9 @@ html, body {
   background: white !important;
   scale: 1 !important ;
 }
+
+.product-image {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
